test_out3.txt
    Checking kinetix-language v0.0.8 (D:\Progetti\Nevhar\Kinetix\crates\language)
error[E0615]: attempted to take value of method `space_before_current` on type `&mut Lexer<'a>`
   --> crates\language\src\lexer\mod.rs:133:14
    |
133 |         self.space_before_current = false;
    |              ^^^^^^^^^^^^^^^^^^^^ method, not a field
    |
    = help: methods are immutable and cannot be assigned to

error[E0615]: attempted to take value of method `space_before_current` on type `&mut Lexer<'a>`
   --> crates\language\src\lexer\mod.rs:137:26
    |
137 |                     self.space_before_current = true;
    |                          ^^^^^^^^^^^^^^^^^^^^ method, not a field
    |
    = help: methods are immutable and cannot be assigned to

For more information about this error, try `rustc --explain E0615`.
error: could not compile `kinetix-language` (lib) due to 2 previous errors
